--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -79,6 +79,7 @@ jobs:
       with:
         name: build-${{ matrix.os }}-${{ matrix.build_type }}
         path: |
-          ${{ steps.strings.outputs.build-output-dir }}/**/*.so
-          ${{ steps.strings.outputs.build-output-dir }}/**/*.exe
+          ${{ steps.strings.outputs.build-output-dir }}/**/*.${{ matrix.os == 'windows-latest' && 'exe' || 'so' }}
           ${{ steps.strings.outputs.build-output-dir }}/**/*.a
+          ${{ steps.strings.outputs.build-output-dir }}/**/*.lib
+          ${{ steps.strings.outputs.build-output-dir }}/**/*.dll
