--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -74,12 +74,10 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest --build-config ${{ matrix.build_type }}
     - name: Upload Artifacts
-      if: success()
       uses: actions/upload-artifact@v4
       with:
         name: build-${{ matrix.os }}-${{ matrix.build_type }}
         path: |
-          ${{ steps.strings.outputs.build-output-dir }}/**/*.${{ matrix.os == 'windows-latest' && 'exe' || 'so' }}
-          ${{ steps.strings.outputs.build-output-dir }}/**/*.a
-          ${{ steps.strings.outputs.build-output-dir }}/**/*.lib
-          ${{ steps.strings.outputs.build-output-dir }}/**/*.dll
+          ${{ steps.strings.outputs.build-output-dir }}/bin/*
+          ${{ steps.strings.outputs.build-output-dir }}/lib/*
+        if-no-files-found: warn
